--- a/exception-manager/pom.xml
+++ b/exception-manager/pom.xml
@@ -61,6 +61,10 @@
       <version>7.2.0</version>
     </dependency>
     <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+    </dependency>
+    <dependency>
       <groupId>cn.hutool</groupId>
       <artifactId>hutool-all</artifactId>
       <version>5.7.12</version>
